--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,11 @@ body {
   --oceancolor: #404bbf;
   --slate: #434455;
   --whitecolor: white;
+  --cloudcolor: #f4f4fd;
+  --cornflower: #e7e9fc;
 }
 
-.link-logo {
+.logo-link {
   text-decoration: none;
   font-family: "Raleway", sans-serif;
   display: inline-flex;
@@ -22,19 +24,23 @@ body {
   flex-shrink: 0;
 }
 
-.web-logo {
+.logo {
   color: var(--iriscolor);
+  font-weight: 800;
+  font-size: 18px;
 }
 
-.studio-logo {
+.studio {
   color: var(--navyblue);
 }
 
-.studio-logo2 {
+.studio-footer {
   color: var(--whitecolor);
+  font-weight: 800;
+  font-size: 18px;
 }
 
-.navbar .pages {
+.nav-menu .page {
   color: var(--navcolor);
   text-decoration: none;
   font-size: 16px;
@@ -44,19 +50,19 @@ body {
   letter-spacing: 0.32px;
 }
 
-.lists {
+.list {
   list-style-type: none;
 }
 
-.navbar .pages:hover,
-.navbar .pages:focus,
-.navbar .pages.currentoption,
-.contact-info .info:hover,
-.contact-info .info:focus {
+.nav-menu .page:hover,
+.nav-menu .page:focus,
+.nav-menu .page.current,
+.contacts-menu .item:hover,
+.contacts-menu .item:focus {
   color: var(--oceancolor);
 }
 
-.contact-info .info {
+.contacts-menu .item {
   color: var(--slate);
   font-size: 16px;
   font-style: normal;
@@ -66,11 +72,11 @@ body {
   text-decoration: none;
 }
 
-.bg-section1 {
+.bg-hero {
   background: var(--navyblue);
 }
 
-.h1-title {
+.hero-title {
   color: var(--whitecolor);
   font-size: 56px;
   font-style: normal;
@@ -80,13 +86,13 @@ body {
   text-align: center;
 }
 
-.btn {
+.button {
   cursor: pointer;
   border-color: transparent;
   font-family: inherit;
 }
 
-.btn.primary {
+.button.primary {
   background: var(--iriscolor);
   color: var(--whitecolor);
   font-size: 16px;
@@ -96,13 +102,13 @@ body {
   letter-spacing: 0.64px;
 }
 
-.btn.primary:hover,
-.btn.primary:focus {
+.button.primary:hover,
+.button.primary:focus {
   background-color: var(--oceancolor);
 }
 
-.btn.filter {
-  background-color: var(--whitecolor);
+.button.filter {
+  background-color: var(--cornflower);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -110,24 +116,35 @@ body {
   letter-spacing: 0.64px;
 }
 
-.btn.filter:hover,
-.btn.filter:focus,
-.btn.filter.primary {
+.button.filter:hover,
+.button.filter:focus,
+.button.filter.current {
   background-color: var(--oceancolor);
   color: var(--whitecolor);
-  padding: 12px 24px;
 }
 
-.desclist .titlelist {
+.title {
+  color: var(--navyblue);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 120% */
+  letter-spacing: 0.4px;
+}
+.description {
+  color: var(--slate);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
-  color: var(--slate);
 }
 
-.sectiontitle {
+.bg-team {
+  background: var(--cloudcolor);
+}
+
+.section-title {
   text-align: center;
   color: var(--navyblue);
   font-size: 36px;
@@ -138,7 +155,7 @@ body {
   text-transform: capitalize;
 }
 
-.teamname {
+.name {
   color: var(--navyblue);
   font-size: 20px;
   font-style: normal;
@@ -156,11 +173,11 @@ body {
   letter-spacing: 0.32px;
 }
 
-.footerbg {
+.bg-footer {
   background: var(--navyblue);
 }
 
-.footerdesc {
+.footer-description {
   color: var(--whitecolor);
   font-size: 16px;
   font-style: normal;
@@ -169,11 +186,16 @@ body {
   letter-spacing: 0.32px;
 }
 
-.projectimg {
+.projects {
+  list-style-type: none;
   text-decoration: none;
 }
 
-.parentlist {
+.project {
+  text-decoration: none;
+}
+
+.project {
   color: var(--navyblue);
   font-size: 20px;
   font-style: normal;
@@ -182,7 +204,7 @@ body {
   letter-spacing: 0.4px;
 }
 
-.childlist {
+.type {
   color: var(--slate);
   font-size: 16px;
   font-style: normal;
